# OP.MagicTrie

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
impl/op/common/: AppendAtomicList.h  Assoc.h  BitboxRangeContainer.h  Bitset.h  CmdLine.h  Console.h  Currying.h  Deref.h  EventSupplier.h  Exceptions.h  ExclusiveStream.h  FetchTicket.h  FixedString.h  IoFlagGuard.h  LexComparator.h  NamedArgs.h  NullStream.h  OsDependedMacros.h  PreallocCache.h  README.md  Range.h  SpanContainer.h  StackAlloc.h  StringEnforce.h  SysLog.h  ThreadPool.h  Unsigned.h  Utils.h  ValueGuard.h  astr.h  atomic_utils.h  ftraits.h  func_iter.h  has_member_def.h  platform.h  typedefs.h
impl/op/flur/: Aggregate.h  Applicator.h  Bookmark.h  Cartesian.h  Comparison.h  Conditional.h  Diff.h  Distinct.h  FactoryBase.h  Filter.h  FlatMapping.h  HierarchyTraversal.h  Ingredients.h  Join.h  LazyRange.h  LazyRangeIter.h  Mapping.h  MergeSortUnion.h  Minibatch.h  OfConatiner.h  OfGenerator.h  OfIota.h  OfIterators.h  OfOptional.h  OfValue.h  OnException.h  OrDefault.h  OrderedJoin.h  OrderingFlatMapping.h  ParallelSort.h  Polymorphs.h  PolymorphsBack.h  Proxy.h  Queue.h  QueueSrc.h  README.md  Reducer.h  Repeater.h  Sequence.h  SequenceState.h  (+11 more)
impl/op/ranges/: FlattenRange.h  FunctionalRange.h  IteratorsRange.h  JoinRange.h  LexComparator.h  OrderedRange.h  PredicateRange.h  PrefixRange.h  RangeUtils.h  SingletonRange.h  SuffixRange.h  TakeWhileRange.h  UnionAllRange.h
impl/op/service/: BackgroundWorker.h
impl/op/trie/: AntiHashTable.h  Bitset.h  CacheManager.h  Containers.h  Exceptions.h  FixedSizeMemoryManager.h  HashTable.h  JoinGenerator.h  KeyValueContainer.h  MemoryBlock.h  MemoryManager.h  MemoryRanges.h  MixedAdapter.h  NamedObjects.h  Node.h  PersistedReference.h  PlainValueManager.h  README.md  Range.h  SectionAdapter.h  SegmentHelper.h  SegmentManager.h  Skplst.h  StemContainer.h  StoreConverter.h  TransactedSegmentManager.h  Transactional.h  Trie.h  TrieIterator.h  TrieNode.h  TriePosition.h  TrieRangeAdapter.h  TrieResidence.h  TypeHelper.h  Utils.h  ValueArray.h  func_iter.h  trie_error.h  typedefs.h
impl/op/trie/ranges/: FlattenRange.h  FunctionalRange.h  IteratorsRange.h  JoinRange.h  PredicateRange.h  PrefixRange.h  RangeUtils.h  SuffixRange.h  UnionAllRange.h
impl/op/utest/: README.md  cmdln_unit_test.h  details.h  sysinfo.h  unit_test.h  unit_test_is.h
impl/op/utest/frontend/: Console.h  JsonFrontend.h
impl/op/utest/platform/: linux_sysinfo.h  macos_sysinfo.h  win_sysinfo.h
impl/op/vtm/: AppendOnlyLog.h  AppendOnlyLogFileRotation.h  AppendOnlySkipList.h  CacheManager.h  EventSourcingSegmentManager.WithPlainScan.h  EventSourcingSegmentManager.WithSpanIntersect.h  EventSourcingSegmentManager.h  EventSourcingSegmentManager.multimap.h  FileRotation.h  FixedSizeMemoryManager.h  HeapBlockHeader.h  HeapManager.h  InMemMemoryChangeHistory.h  MemoryBlock.h  MemoryBlockHeader.h  MemoryChunks.h  MemoryManager.h  MemoryRanges.h  NamedObjects.h  PersistedReference.h  README.md  SegmentHelper.h  SegmentHelperCache.h  SegmentManager.h  SegmentTopology.h  ShadowBuffer.h  ShadowBufferCache.h  Skplst.h  StringMemoryManager.h  TransactedSegmentManager.h  Transactional.h  typedefs.h  vtm_error.h
impl/op/vtm/datastructure/: Skplst.h
impl/op/vtm/integrity/: Stream.h
impl/op/vtm/managers/: AppendOnlyLogFileRotation.h  BaseSegmentManager.h  BucketIndexedList.h  EventSourcingSegmentManager.h  HistoryRecovery.h  InMemMemoryChangeHistory.h  SegmentRegion.h  SegmentRegionCache.h
impl/op/vtm/slots/: FixedSizeMemoryManager.h  HeapBlockHeader.h  HeapManager.h
matrix/: matrix.cpp  matrix.vcxproj  matrix.vcxproj.filters
projects/: atom_str_view.natvis
tests/: AtomStrLiteral.h  BgWorkerTest.cpp  BitsetTest.cpp  CMakeLists.txt  ContainersTest.cpp  EventSourcedSegmentManagerTest.cpp  FixedSizeMemoryManagerTest.cpp  GenericMemoryTest.h  MemoryChangeHistoryFixture.h  NodeTest.cpp  Playbook.h  RangeTest.cpp  SegmentManagerTest.cpp  SegmentToplogyTest.cpp  SpanContainerTest.cpp  StemContainer.cpp  Transacted.cpp  Trie.cpp  TrieTestUtils.h  skplst.cpp  testMixedAdapter.cpp  test_comparators.h  tr.2015.sln  tr.2015.vcxproj  tr.2015.vcxproj.filters  tr.cpp  tr.sln  tr.vcxproj  tr.vcxproj.filters  unit_test.h  unit_test_is.h
tests/common/: BitsetTest.cpp  CmdLine.cpp  Currying.cpp  EventSupplier.cpp  FixedString.cpp  Multiimplementation.cpp  PreallocCache.cpp  ThreadPool.cpp  UtilsTest.cpp  ZoneTest.cpp  basic.cpp
tests/flur/: Applicator.cpp  Cartesian.cpp  Filter.cpp  Generator.cpp  Iterators.cpp  Join.cpp  JoinUnordered.cpp  MergeSortUnion.cpp  Minibatch.cpp  Mt.cpp  OfLazyValue.cpp  ParallelSort.cpp  Polymorphic.cpp  StlContainers.cpp  StringInput.cpp  ThenDefault.cpp  ThenDiff.cpp  ThenDistinct.cpp  ThenException.cpp  ThenFlatMap.cpp  ThenHierarchy.cpp  ThenMap.cpp  ThenOrderingFlatMap.cpp  UnionAll.cpp  Zip.cpp  maf.cpp
tests/metrics/: make_compare_report.py
tests/metrics/data/win64/: test_at_2026-02-24T21_44_47.json
tests/metrics/data/wsl/: test_at_2026-02-26T11_47_53.json
tests/ranges/: CommonRangesOpTest.cpp
tests/trie/: Trie.cpp  TrieFixedString.cpp  TrieRanges.cpp  TrieTestUtils.h  testMixedAdapter.cpp  trieValueManager.cpp
tests/vtm/: AppendAtomicList.cpp  AppendOnlyLog.cpp  AppendOnlyLogFileRotation.cpp  AppendOnlySkipList.cpp  ContainersTest.cpp  EventSourcedSegmentManagerTest.cpp  FixedSizeMemoryManagerTest.cpp  GenericMemoryTest.h  InMemMemoryChangeHistory.cpp  MemoryChangeHistoryFixture.h  MemoryChangeHistoryTestHarness.h  SegmentManagerTest.cpp  SegmentToplogyTest.cpp  StemContainer.cpp  StringManagerTest.cpp  Transacted.cpp
tools/build.env/: how.txt
tools/build.env/boost/: Dockerfile  user-config.jam
tools/build.env/clang/: Dockerfile
tools/build.env/utest/: Dockerfile  up.compile.bat
